--- a/CSS/mainstyle.css
+++ b/CSS/mainstyle.css
@@ -1,3 +1,5 @@
+@media screen and (min-width: 1280px) {
+
 body {
 background-color:#F2F0ED;
 }
@@ -203,3 +205,4 @@ margin-top: -50px;
 font-size: 15px;
 letter-spacing: 1.6px;
 }
+ }
